docker/k8s/ingress0.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: docker-http-ingress
spec:
    backend:
        serviceName: docker-http
        servicePort: 7890
